# monit

./: AUTHORS  CHANGES.txt  CONTRIBUTORS  COPYING  FAQ.txt  LICENSE  Makefile.in  PACKAGES  PLATFORMS  README  README.DEVELOPER  README.SSL  alert.c  alert.h  autogen.sh  collector.c  configure.ac  control.c  daemonize.c  doxygen.cfg  env.c  event.c  event.h  exclude  file.c  file.h  gc.c  getloadavg.c  http.c  install-sh  l.l  log.c  make_dist  md5.c  md5.h  monit.pod  monitor.c  monitor.h  monitrc  net.c  (+21 more)
contrib/: monit-OSX-startup.README  monit.php  monit.upstart  monit_update  monitrc-gentoo  rc.monit  waitdate.patch  wap.php
device/: device.h  device_common.c  device_sysdep.h  sysdep_AIX.c  sysdep_DARWIN.c  sysdep_FREEBSD.c  sysdep_HPUX.c  sysdep_LINUX.c  sysdep_NETBSD.c  sysdep_OPENBSD.c  sysdep_SOLARIS.c  sysdep_UNKNOWN.c
doc/: examples.html  monit.html  presentation.odp
http/: base64.c  base64.h  cervlet.c  cervlet.h  engine.c  engine.h  httpstatus.h  processor.c  processor.h
m4/: strftime.m4
process/: process_common.c  process_sysdep.h  sysdep_AIX.c  sysdep_DARWIN.c  sysdep_FREEBSD.c  sysdep_HPUX.c  sysdep_LINUX.c  sysdep_NETBSD.c  sysdep_OPENBSD.c  sysdep_SOLARIS.c  sysdep_UNKNOWN.c
protocols/: NOTES  apache_status.c  clamav.c  default.c  dns.c  dwp.c  ftp.c  generic.c  gps.c  http.c  imap.c  ldap2.c  ldap3.c  lmtp.c  memcache.c  mysql.c  nntp.c  ntp3.c  pgsql.c  pop.c  postfix_policy.c  protocol.c  protocol.h  radius.c  rdate.c  rsync.c  sip.c  smtp.c  ssh.c  tns.c
web/: CHANGES.txt  FAQ.txt  PLATFORMS.txt  contact.php  donate.php  index.php  main.css  monit.html  sponsors.php  who.html  who.php
web/doc/: apache.php  ballyhoo.php  changes.php  examples.php  faq.php  index.php  install.php  manual.php  next.php  platforms.php  screen.php  ssl.php
web/download/: index.php  packages.php
web/img/: passive.xcf
web/include/: footer.html  header.html  menu.php
web/news/: index.php  secadv_20040305.txt
web/story/: index.php
web/support/: index.php
